fix overflow

--- a/style.css
+++ b/style.css
@@ -10,11 +10,21 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
+    margin: 20px;
+    padding: 10px;
 }
 
+.title{
+    color: #fff;
+    font-size: 12px;
+    justify-content: center;
+}
+
+h2 {
+    display: flex;
+    justify-content: center;
+    font-weight: 300;
+}
 .container{
  display: flex;
  align-items: center;
